[project]
name = "AstroChat"
version = "0.1.0"
authors = [
  { name="Gert-jan Poortman", email="arjanpoortman@gmail.com" },
]
description = "AstroChat is a tool that can interpretate astrological texts using LLMS to interpretate horoscopes."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://huggingface.co/spaces/EsoCode/AstroChat"
"Bug Tracker" = "https://huggingface.co/spaces/EsoCode/AstroChat"
"Source Code" = "https://huggingface.co/spaces/EsoCode/AstroChat"

[build-system]
requires = ["setuptools", "wheel", "find_package"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
target-version = ['py38', 'py39']
